--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ img {
 .alimentos div h2 {
     font-size: 30px;
     font-weight: bold;
+    box-shadow: 0 -1px 1px 2px white;
 }
 
 .alim-col {
@@ -156,6 +157,8 @@ img {
     border-radius: 10px;
     background: #2c2c2c;
     margin: 5px;
+    box-shadow: 0 -1px 1px 2px white;
+    
 }
 
 .alim-col h3 {
