--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ a.active,.nav-a:hover {
 .home {
     width: 100%;
     height: 100%;
-    background: #575757;
+    background: #5757579d;
     text-align: center;
     padding-top: 120px;
     padding-bottom: 40px;
@@ -126,7 +126,7 @@ img {
 /*-- estrutura dos alimentos inicio --*/
 
 .pizza {
-    background: #838383;
+    background: #8383839b;
 }
 
 .alimentos {
@@ -147,7 +147,6 @@ img {
 .alimentos div h2 {
     font-size: 30px;
     font-weight: bold;
-    box-shadow: 0 -1px 1px 2px white;
 }
 
 .alim-col {
@@ -157,7 +156,6 @@ img {
     border-radius: 10px;
     background: #2c2c2c;
     margin: 5px;
-    box-shadow: 0 -1px 1px 2px white;
     
 }
 
@@ -190,15 +188,15 @@ img {
 }
 
 .bebidas {
-    background: #575757;
+    background: #5757579d;
 }
 
 .sobremesa {
-    background: #838383;
+    background: #8383839b;
 }
 
 footer {
-    background: #000000;
+    background: #000000c7;
     text-align: center;
 }
 
